objects/RestoreObject__c.object
<CustomObject>
    <fields>
        <fullName>APICalls__c</fullName>
        <label>APICalls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>restoreDateTime__c</fullName>
        <label>restoreDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>restoreUser__c</fullName>
        <label>restoreUser</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RestoreObject</label>
    <nameField>
        <label>RestoreActivityId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RestoreObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>